# spring-visualizer

./: Cargo.toml  Makefile  README.md  example.dot  test.txt
.github/workflows/: rust.yml
data/: A.java  B.java  C.java  D.java
data/scanned/: NotScanned.java  Scanned.java
data/scanned-dir/: AlsoScanned.java  Scanned.java
data/scanned_dir/: AlsoScanned.java  NotScanned.java  Scanned.java
demo/: example.dot  pom.xml
demo/src/main/java/com/example/demo/: DaoConfig.java  DemoApplication.java  MyBean.java  ServiceConfig.java
demo/src/main/java/com/example/demo/repository/: BarRepository.java  FooRepository.java
demo/src/main/java/com/example/demo/service/: BarService.java  ConstructorInjected.java  ConstructorInjection.java  FooService.java  NotService.java  Unparsable.java
src/: annotation.rs  autowired.rs  bean.rs  class.rs  component_type.rs  lib.rs  main.rs  mod.rs
